# llm-quant-lab

./: .env.example  .gitignore  AGENTS.md  BLOG.md  Makefile  README.md  pyproject.toml
.pi/audit/: 2026-04-11-llm-quant-lab.md  2026-04-11-qa-pos-refactor.md
.pi/plans/: feat-runtime-cli.md  fix-benchmark-bugs-v4.md  fix-long-results-validation.md  fix-nvidia-only-device-map.md  fix-turboquant-algorithm2.md
benchmarks/long_context/: needle.jsonl
benchmarks/perplexity/: wikitext.jsonl
benchmarks/prompts/: basic.jsonl  long_context.jsonl
configs/: baseline.yaml  kv_quant.yaml  long_context.yaml  weight_quant.yaml
src/: main.py
src/eval/: needle.py  perplexity.py  task_score.py
src/metrics/: collector.py
src/quantization/: kv_cache.py  kv_hooks.py
src/quantization/methods/: kivi.py  turboquant.py  uniform.py
src/reporter/: context_plots.py  csv_writer.py  plots.py
src/runner/: _utils.py  baseline.py  context_sweep.py  kv_quant.py  loader.py  weight_quant.py
